--- a/less/dashboard/variables.less
+++ b/less/dashboard/variables.less
@@ -14,3 +14,6 @@
 @gray:             lighten(@gray-base, 33.5%); // #555
 @gray-light:       lighten(@gray-base, 46.7%); // #777
 @gray-lighter:     lighten(@gray-base, 93.5%); // #eee
+@grid-border-color: #eceeef;
+@pager-text-border-color: #999999;
+@active-color: #000000;
