--- a/less/dashboard/style.less
+++ b/less/dashboard/style.less
@@ -403,7 +403,7 @@ ul.alert-dropdown {
 
 /** Pager */
 .pager {
-    padding: 10px 30px;
+    margin-bottom: 15px;
     font-size: 30px;
     &-textbox {
         border: none;
@@ -434,5 +434,12 @@ ul.alert-dropdown {
     &-button[disabled="disabled"] {         
         color: @pager-text-border-color;
         cursor: not-allowed;
+    }
+}
+.sorter {
+    margin-top: 15px;
+    margin-bottom: 15px;   
+    .dropdown-menu {
+        width: 250px;
     }
 }
