--- a/less/dashboard/style.less
+++ b/less/dashboard/style.less
@@ -366,6 +366,7 @@ ul.alert-dropdown {
 
 
 /** grid **/
+
 .grid-row {
     border: 1px solid @grid-border-color;
     margin-bottom: 10px;
@@ -398,7 +399,10 @@ ul.alert-dropdown {
             font-style: normal;
             font-size: 14px;
         }
-    }    
+    } 
+    &-options-default {
+        display: none;
+    }   
 }
 
 /** Pager */
