--- a/templates/dashboard/pages/manageTrip/manageTrip.html
+++ b/templates/dashboard/pages/manageTrip/manageTrip.html
@@ -141,4 +141,11 @@
     </div>
   </div>
 </script>
+<script id="grid-row-options-template" type="text/x-handlebars-template">
+  <div class="container-fluid">
+    <div class="row grid-row">
+       {{id}}
+    </div>
+  </div>
+</script>
 {{{{/raw-helper}}}}
