Manage trip and styles

--- a/css/dashboard/style.css
+++ b/css/dashboard/style.css
@@ -369,3 +369,12 @@ ul.alert-dropdown {
 .sorter .dropdown-menu {
   width: 250px;
 }
+/**bootstrap -override */
+.btn-primary,
+.btn-primary:hover,
+.btn-primary:active,
+.btn-primary:visited,
+.btn-primary:focus {
+  background-color: #fed136;
+  border-color: #fed136;
+}
