--- a/less/dashboard/style.less
+++ b/less/dashboard/style.less
@@ -447,3 +447,13 @@ ul.alert-dropdown {
         width: 250px;
     }
 }
+
+/**bootstrap -override */
+.btn-primary,
+.btn-primary:hover,
+.btn-primary:active,
+.btn-primary:visited,
+.btn-primary:focus {
+    background-color: @theme-primary;
+    border-color: @theme-primary;
+}
