--- a/templates/dashboard/pages/manageTrip.html
+++ b/templates/dashboard/pages/manageTrip.html
@@ -6,7 +6,7 @@
     </div>
 </div> 
 {{{{raw-helper}}}}
-<script id="grid-row-template" type="text/x-handlebars-template">
+<script id="grid-row-template-details" type="text/x-handlebars-template">
   <div class="container-fluid">
     <div class="row grid-row">
         <div class="col-sm-4 grid-row-container">
@@ -145,14 +145,58 @@
 </script>
 <script id="grid-row-options-template" type="text/x-handlebars-template">
   <div class="container-fluid">
-    <div class="row grid-row">
-       {{id}}
+    <div class="row grid-row">       
+        <div class="col-sm-12">
+            <div class="pull-right">
+                <button type="button" class="btn btn-default btn-primary comments-trip" _id="{{_id}}">Add Comments</button>
+                <button type="button" class="btn btn-default btn-primary driver-details-trip" _id="{{_id}}">Set Driver Details</button>
+                <button type="button" class="btn btn-default btn-primary quote-trip" _id="{{_id}}">Set Quote</button>
+                <button type="button" class="btn btn-default btn-primary edit-trip" _id="{{_id}}">Edit</button>
+            </div>
+        </div>       
     </div>
   </div>
+</script>
+<script id="grid-row-template" type="text/x-handlebars-template">
+  <div class="container-fluid">
+    <div class="row grid-row">
+        <div class="col-sm-12 grid-row-container">
+            <span class="grid-row-title">Pickup</span> at 
+            {{#each pickup}}
+                {{address.city}} on {{date}}
+                {{{exceptOnFirst @index ','}}}
+                (<span class="grid-row-title">Contact:</span>             
+                {{#each contact}} 
+                    {{mobile}}
+                    {{{exceptOnFirst @index ','}}}
+                {{/each}})
+                (<span class="grid-row-title">Material:</span> 
+                {{#each material}} 
+                    {{name}} - {{materialType}}
+                    {{{exceptOnFirst @index ','}}}
+                {{/each}})
+            {{/each}}            
+            <br/>
+            <span class="grid-row-title">Drop</span> at 
+            {{#each drop}}
+                {{address.city}} on {{date}}
+                {{{exceptOnFirst @index ','}}}
+                (<span class="grid-row-title">Contact:</span> 
+                 {{#each contact}}                  
+                    {{mobile}}
+                    {{{exceptOnFirst @index ','}}}
+                {{/each}})
+                (<span class="grid-row-title">Items:</span> 
+                {{itemsToDrop}}
+                )
+            {{/each}}                       
+        </div>
+    </div>
+</div>
 </script>
 {{{{/raw-helper}}}}
 {{{{raw-helper}}}}
 <script type="text/javascript">
-    console.log("template data",UTILS.getCurrentTemplateData()),$(document).ready(function(){var e=UTILS.getCurrentTemplateData();new GRID_HELPER.GRID(".manage-trips-content",{gridData:e,gridId:"gridManageTrips",rowConfig:{template:"grid-row-template",optionsTemplate:"grid-row-options-template",optionsEvent:"mouseover"},sortConfig:{multiple:!1,options:[{title:"Pickup Date",key:"pickup.date",selected:!0,order:"desc"},{title:"Drop Date",key:"drop.date"},{title:"Material Value",key:"pickup.material.approximateCost"}]}})});
+    console.log("template data",UTILS.getCurrentTemplateData()),$(document).ready(function(){var e=UTILS.getCurrentTemplateData();new GRID_HELPER.GRID(".manage-trips-content",{gridData:e,gridId:"gridManageTrips",rowConfig:{template:"grid-row-template-details",optionsTemplate:"grid-row-options-template",optionsEvent:"mouseover",optionsPostRender:function(e,t){console.log(t),$(e).find(".edit-trip").click(function(){MENU_HELPER.menuClick("addTrip","manageTrip",{extraHref:t._id})})}},sortConfig:{multiple:!1,options:[{title:"Pickup Date",key:"pickup.date",selected:!0,order:"desc"},{title:"Drop Date",key:"drop.date"},{title:"Material Value",key:"pickup.material.approximateCost"}]}})});
 </script>
 {{{{/raw-helper}}}}
