--- a/less/main/variables.less
+++ b/less/main/variables.less
@@ -2,8 +2,9 @@
 
 // Gray and Brand Colors for use across theme
 
-@theme-primary:    #fed136;
+@theme-primary:   rgb(254,209, 54);// #fed136;
 @theme-danger:     #e74c3c;
+
 
 @gray-base:        #000;
 @gray-darker:      lighten(@gray-base, 13.5%); // #222
