--- a/less/dashboard/variables.less
+++ b/less/dashboard/variables.less
@@ -5,6 +5,7 @@
 @theme-bg-main:    #3b3736;
 @theme-logo-color: #fed136;
 @theme-primary:    #fed136;
+@theme-primary-control: #3b3736;
 @theme-danger:     #e74c3c;
 @theme-footer-bg-color: white;
 
