--- a/less/dashboard/style.less
+++ b/less/dashboard/style.less
@@ -450,10 +450,27 @@ ul.alert-dropdown {
 
 /**bootstrap -override */
 .btn-primary,
+.btn-default
+{
+    background-color: @theme-primary-control;
+    border-color: @theme-primary-control;
+    color: white;
+    font-weight: 300;
+    font-size: 16px;
+}
+
 .btn-primary:hover,
 .btn-primary:active,
 .btn-primary:visited,
-.btn-primary:focus {
-    background-color: @theme-primary;
-    border-color: @theme-primary;
+.btn-primary:focus,
+.btn-default:hover,
+.btn-default:active,
+.btn-default:visited,
+.btn-default:focus
+{
+    background-color: @theme-primary;//rgb(192, 192, 192);
+    border-color: @theme-primary;//rgb(192, 192, 192);
+    // color: black;
+    // font-weight: 300;
 }
+
