--- a/templates/dashboard/pages/manageTrip/manageTrip.html
+++ b/templates/dashboard/pages/manageTrip/manageTrip.html
@@ -125,18 +125,32 @@
                     </div>                                           
                 </div>  
             </div>
-            <div class="grid-row-title">Comments:</div>  
-             <div class="row">     
-                <div class="grid-row-tile col-sm-12">                
-                    <div>
-                        <span class="grid-row-tile-text">
-                            {{#each comments}}
-                                {{this}} <br/>
-                            {{/each}}
-                        </span>
-                    </div>                                           
-                </div>  
-            </div>
+            {{#if (ifArray comments)}}            
+                <div class="grid-row-title">Comments:</div>  
+                <div class="row">     
+                    <div class="grid-row-tile col-sm-12">                
+                        <div>
+                            <span class="grid-row-tile-text">
+                                {{#each comments}}
+                                    {{this}} <br/>
+                                {{/each}}
+                            </span>
+                        </div>                                           
+                    </div>  
+                </div>
+            {{/if}}
+            {{#if quotes}}
+                <div class="grid-row-title">Quote:</div> 
+                <div class="row">     
+                    <div class="grid-row-tile col-sm-12">                
+                        <div>
+                            <span class="grid-row-tile-text">
+                                {{quotes.cost}} 
+                            </span>
+                        </div>                                           
+                    </div>  
+                </div>
+            {{/if}}
         </div>     
     </div>
   </div>
